# pptxtpl

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: multi_slide_loop_create_template.py  multi_slide_loop_output.pptx  multi_slide_loop_render.py  multi_slide_loop_template.pptx
src/pptxtpl/: __init__.py  exceptions.py  inline_image.py  richtext.py  slide_ops.py  template.py  xml_utils.py
tests/: conftest.py  test_integration.py  test_multi_slide_loops.py  test_richtext.py  test_slide_conditionals.py  test_slide_loops.py  test_smoke.py  test_template.py  test_xml_utils.py
